--- a/QtDeployer/mainwindow.ui
+++ b/QtDeployer/mainwindow.ui
@@ -7,11 +7,36 @@
     <x>0</x>
     <y>0</y>
     <width>611</width>
-    <height>365</height>
+    <height>442</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QLineEdit, QComboBox
+{
+	border: 1px solid rgb(0, 124, 243);
+	border-radius: 4px;
+	padding-left:4px;
+}
+
+QPushButton#btnDeploy
+{
+background-color: rgb(85, 170, 255);
+	
+}
+
+QPushButton
+{
+	background: rgb(210, 210, 210);
+	border: 1px solid rgb(210, 210, 210);
+	border-radius: 4px;
+}
+QPushButton:hover
+{
+	background: rgb(180, 180, 180)
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0">
@@ -36,6 +61,12 @@
        </item>
        <item>
         <widget class="QPushButton" name="btnConfig">
+         <property name="minimumSize">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
          <property name="text">
           <string>配置</string>
          </property>
@@ -62,16 +93,6 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QComboBox" name="ComboQtVersion">
-           <property name="minimumSize">
-            <size>
-             <width>350</width>
-             <height>40</height>
-            </size>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="1">
           <widget class="QComboBox" name="comboComplier">
            <property name="minimumSize">
@@ -86,6 +107,19 @@
           <widget class="QLabel" name="label_2">
            <property name="text">
             <string>选择编译器</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="editVersion">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -106,10 +140,16 @@
        </item>
        <item>
         <widget class="DropLabel" name="labProgram">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>60</height>
+           <height>140</height>
           </size>
          </property>
          <property name="font">
@@ -118,7 +158,7 @@
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(203, 203, 203);
+          <string notr="true">background-color: rgb(50, 50, 50);
 color: rgb(255, 0, 0);</string>
          </property>
          <property name="text">
@@ -147,7 +187,7 @@ color: rgb(255, 0, 0);</string>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(85, 170, 0);</string>
+            <string notr="true"/>
            </property>
            <property name="text">
             <string>生成</string>
