--- a/Examples/mainwindow.ui
+++ b/Examples/mainwindow.ui
@@ -19,9 +19,22 @@
      <rect>
       <x>40</x>
       <y>50</y>
-      <width>181</width>
-      <height>201</height>
+      <width>201</width>
+      <height>501</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>150</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
