--- a/Examples/mainwindow.ui
+++ b/Examples/mainwindow.ui
@@ -28,13 +28,52 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>150</y>
+      <y>70</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>120</y>
+      <width>231</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="IPEdit" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>250</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>260</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ip输入框</string>
     </property>
    </widget>
   </widget>
@@ -55,6 +94,12 @@
    <class>TableMenu</class>
    <extends>QTableWidget</extends>
    <header>tablemenu.h</header>
+  </customwidget>
+  <customwidget>
+   <class>IPEdit</class>
+   <extends>QWidget</extends>
+   <header>ipedit.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
